tests/parser/should_fail/T25258c.hs
{-# LANGUAGE MagicHash, ExtendedLiterals #-}

module T25258c where

import GHC.Exts

x0 = 0x08#misc  -- invalid lowercase identifier
